# TEST2

./: CMakeLists.txt
include/: ad.h  su.h
src/: addd.cpp  main  main.cpp  subb.cpp
